--- a/index.html
+++ b/index.html
@@ -96,26 +96,26 @@
         <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-        <a href="http://illinois.edu/" target="_blank">
-        <div class="aboutMe" style="background-image: url('./static/images/illinois.jpeg');"></div>
+        <a href="http://ocient.com/" target="_blank">
+        <div class="aboutMe" style="background-image: url('./static/images/ocient.png');"></div>
         </a>  
       </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
-        <h3>University of Illinois at Urbana-Champaign</h3>
-        <div id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
-        <div id="location">Champaign, IL</div>
-          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am pushed to challenge myself every single day. Whether it is being a co-founder for an investment group on campus or making time to play tennis with friends, I am always trying to keep myself busy every single day. Illinois showed me that learning is not just done in the classroom, as my experiences at school shaped me to be the person I am today.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
+        <h3>Ocient</h3>
+        <div id="subtitle">Incoming Software Engineer</div>
+        <div id="location">Chicago, IL</div>
+          <p>I am excited to announce that I have accepted a full-time software position with Ocient. Named one of the top startups to watch out for in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I have the opportunity to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3 class="standardTextAlignCenter">University of Illinois at Urbana-Champaign</h3>
-        <div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
-        <div class="standardTextAlignCenter" id="location">Champaign, IL</div>
+        <h3 class="standardTextAlignCenter">Ocient</h3>
+        <div class="standardTextAlignCenter" id="subtitle">Incoming Software Engineer</div>
+        <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am pushed to challenge myself every single day. Whether it is being a co-founder for an investment group on campus or making time to play tennis with friends, I am always trying to keep myself busy every single day. Illinois showed me that learning is not just done in the classroom, as my experiences at school shaped me to be the person I am today.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
+          <p>I am excited to announce that I have accepted a full-time software position with Ocient. Named one of the top startups to watch out for in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I have the opportunity to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
         </p>
       </div>
     </div>
@@ -123,20 +123,20 @@
     <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
-        <h3>Echelon Consulting</h3>
-        <div id="subtitle">Software Engineer Intern, Summer 2017</div>
-        <div id="location">Chicago, IL</div>
-          <p>Echelon Consulting is a small software shop that specializes in building and supporting full lifecycle applications for its clients.</p><p>Echelon helped me gain an inside look on how a small software firm operates, and showed me just what it takes to be a successful founder of a company. Being put on two projects throughout my summer at Echelon, I had to learn to balance two completely different applications and make the necessary changes when called upon. Learning to manage my time wisely and learn new technology stacks in the process, my time here definitely increased my software skills and hunger to learn more.</p><p>Tech used: Java Spring MVC, Oracle SQL, Apache SOLR search, Dojo.js, HTML, Less</p>
+        <h3>University of Illinois at Urbana-Champaign</h3>
+        <div id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
+        <div id="location">Champaign, IL</div>
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am pushed to challenge myself every single day. Whether it is being a co-founder for an investment group on campus or making time to play tennis with friends, I am always trying to keep myself busy every single day. Illinois showed me that learning is not just done in the classroom, as my experiences at school shaped me to be the person I am today.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
-          <a href="http://www.echelon.org/" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/echelon.jpeg');"></div>
+          <a href="http://illinois.edu/" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/illinois.jpeg');"></div>
           </a>
         </div>
         <div class="hidden-lg hidden-md hidden-sm">
-          <a href="http://www.echelon.org/" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/echelon.jpeg');"></div>
+          <a href="http://illinois.edu/" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/illinois.jpeg');"></div>
           </a>
         </div>  
       </div>
@@ -145,7 +145,34 @@
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3  class="standardTextAlignCenter">Echelon Consulting</h3>
+        <h3  class="standardTextAlignCenter">University of Illinois at Urbana-Champaign</h3>
+        <div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
+        <div class="standardTextAlignCenter" id="location">Champaign, IL</div>
+        <p>
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am pushed to challenge myself every single day. Whether it is being a co-founder for an investment group on campus or making time to play tennis with friends, I am always trying to keep myself busy every single day. Illinois showed me that learning is not just done in the classroom, as my experiences at school shaped me to be the person I am today.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
+        </p>
+      </div>
+    </div>
+  <div class="row space"></div><div class="row space"></div>
+        <div class="row">
+      <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+        <a href="http://www.echelon.org/" target="_blank">
+        <div class="aboutMe" style="background-image: url('./static/images/echelon.jpeg');"></div>
+        </a>  
+      </div>
+      <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+        <h3>Echelon Consulting</h3>
+        <div id="subtitle">Software Engineer Intern, Summer 2017</div>
+        <div id="location">Chicago, IL</div>
+          <p>Echelon Consulting is a small software shop that specializes in building and supporting full lifecycle applications for its clients.</p><p>Echelon helped me gain an inside look on how a small software firm operates, and showed me just what it takes to be a successful founder of a company. Being put on two projects throughout my summer at Echelon, I had to learn to balance two completely different applications and make the necessary changes when called upon. Learning to manage my time wisely and learn new technology stacks in the process, my time here definitely increased my software skills and hunger to learn more.</p><p>Tech used: Java Spring MVC, Oracle SQL, Apache SOLR search, Dojo.js, HTML, Less</p>
+      </div>
+      <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+    </div>
+    <div class="row space hidden-lg hidden-md hidden-sm"></div>
+    <div class="row hidden-lg hidden-md hidden-sm">
+      <div class="col-xs-12 mobilePadding">
+        <h3 class="standardTextAlignCenter">Echelon Consulting</h3>
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2017</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
@@ -154,25 +181,32 @@
       </div>
     </div>
   <div class="row space"></div><div class="row space"></div>
-        <div class="row">
+    <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
-      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-        <a href="https://pivotal.io/labs" target="_blank">
-        <div class="aboutMe" style="background-image: url('./static/images/pivotal.jpg');"></div>
-        </a>  
-      </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
         <h3>Pivotal Labs</h3>
         <div id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div id="location">Chicago, IL</div>
           <p>Pivotal Labs is a programming consulting company that teaches clients how to program in an agile software development cycle.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p><p>Tech used: React.js, Redux.js, Node.js, Pivotal Cloud Foundry, Java Spring, HTML, Less</p>
       </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+        <div class="hidden-xs" style="float:left;">
+          <a href="https://pivotal.io/labs" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/pivotal.jpg');"></div>
+          </a>
+        </div>
+        <div class="hidden-lg hidden-md hidden-sm">
+          <a href="https://pivotal.io/labs" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/pivotal.jpg');"></div>
+          </a>
+        </div>  
+      </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3 class="standardTextAlignCenter">Pivotal Labs</h3>
+        <h3  class="standardTextAlignCenter">Pivotal Labs</h3>
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
@@ -189,32 +223,25 @@
     </div>
     <div class="row space"></div>
   
-    <div class="row">
+        <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+        <a href="https://www.citadel.com/" target="_blank">
+        <div class="aboutMe" style="background-image: url('./static/images/citadel.jpg');"></div>
+        </a>  
+      </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
         <h3>Citadel LLC</h3>
         <div id="subtitle">Technology Intern, Summer 2015</div>
         <div id="location">Chicago, IL</div>
           <p>Citadel is a hedge fund and a leading investor in financial markets around the world. The sector that I worked in, Citadel Technology, was a business that marketed and sold their trading application to other companies.</p><p>Citadel was my first time seeing how software development worked in the work place. During my time I helped automate software environment checks, optimized existing scripts, and even created my own program to stress test their financial software. Citadel showed me how to keep your nose to the grind stone to get the job done, and that the best way to learn coding is through simply playing around with unfamiliar technologies. Being able to see the simple intricacies and interesting problems being solved every single day at Citadel, this internship confirmed my choice in picking the right profession.</p><p>Tech used: Python, matplotlib, shell scripting, FIX protocol</p>
       </div>
-      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-        <div class="hidden-xs" style="float:left;">
-          <a href="https://www.citadel.com/" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/citadel.jpg');"></div>
-          </a>
-        </div>
-        <div class="hidden-lg hidden-md hidden-sm">
-          <a href="https://www.citadel.com/" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/citadel.jpg');"></div>
-          </a>
-        </div>  
-      </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3  class="standardTextAlignCenter">Citadel LLC</h3>
+        <h3 class="standardTextAlignCenter">Citadel LLC</h3>
         <div class="standardTextAlignCenter" id="subtitle">Technology Intern, Summer 2015</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
