Jessica is cool  enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
       <div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
-          Hi and thanks for checking out my site! My name is Greg Murray and I am a student at the University of Illinois. I have worked at 3 different companies in software roles, and am a fast learner when it comes to new technology stacks. Here is just a little of what I have done so far.
+          Hi and thanks for checking out my site! My name is Greg Murray and I am a graduate from the University of Illinois. I have worked at 3 different companies in software roles, and am a fast learner when it comes to new technology stacks. Here is just a little of what I have done so far.
       </div>
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
     </div>
@@ -473,7 +473,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
     <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
-      <h2>I'm Chicago raised, a driven developer, and 2006 Time Magazine's Person of the Year. Let's get in touch.</h2>
+      <h2>I'm Chicago raised, a driven developer, and the most normal CS major Jessica Bicek has ever met. Let's get in touch.</h2>
     </div>
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
   </div>
