--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
       <div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
-          Hi and thanks for checking out my site! My name is Greg Murray and I am a graduate from the University of Illinois. I have worked at 3 different companies in software roles, and am a fast learner when it comes to new technology stacks. Here is just a little of what I have done so far.
+          Hi and thanks for checking out my site! My name is Greg Murray and I am a software engineer based out of Chicago. I have a ton of experience with high performant C++ and multi-threaded concepts, as I have been working at a database startup out of college. This website is not always the most up to date, so the best way to reach me is through the contact button below.
       </div>
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
     </div>
@@ -264,26 +264,26 @@
         <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-        <a href="https://github.com/gmurr20/CollegeTVDevice" target="_blank">
-        <div class="aboutMe" style="background-image: url('./static/images/raspberryPi.jpg');"></div>
+        <a href="https://github.com/gmurr20/dubs_app" target="_blank">
+        <div class="aboutMe" style="background-image: url('./static/images/dub_logo.jpg');"></div>
         </a>  
       </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
-        <h3>Raspberry Pi Google Calendar TV Alarm</h3>
-        <div id="subtitle">Spring 2017</div>
+        <h3>Dubs App</h3>
+        <div id="subtitle">Summer 2020</div>
         <div id="location"></div>
-          <p>Having a busy schedule at school and struggling to wake up most mornings, I created a television alarm with a raspberry pi computer to help me be better organized. Using the google calendar api, I integrated my schedule to turn on my bedroom TV an hour before my first event was scheduled for the day. The TV would display my application, which showed the weather for the week, time, a couple news articles, and my schedule using various apis I found online. It prompted me to wake up with a basic text to speech module, and gave me time to see what I had going on for the day before it shut itself down. This was a really fun experience working with a raspberry pi for my first time, as I still use this program every single day.</p><p>Tech used: Python, Raspberry Pi, cec-client, Google Calendar api, Cron, HTML, CSS</p>
+          <p>During the pandemic, a friend and I decided to teach ourselves Flutter. We were frequently playing video games together online, so thought it would be a fun idea to create a messenger app for us and our close friends. Using the Flutter BLoC pattern, we created a functional messenger app that uses Google Firebase as the backend.</p><p>Tech used: Flutter, Dart, Google Firebase</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3 class="standardTextAlignCenter">Raspberry Pi Google Calendar TV Alarm</h3>
-        <div class="standardTextAlignCenter" id="subtitle">Spring 2017</div>
+        <h3 class="standardTextAlignCenter">Dubs App</h3>
+        <div class="standardTextAlignCenter" id="subtitle">Summer 2020</div>
         <div class="standardTextAlignCenter" id="location"></div>
         <p>
-          <p>Having a busy schedule at school and struggling to wake up most mornings, I created a television alarm with a raspberry pi computer to help me be better organized. Using the google calendar api, I integrated my schedule to turn on my bedroom TV an hour before my first event was scheduled for the day. The TV would display my application, which showed the weather for the week, time, a couple news articles, and my schedule using various apis I found online. It prompted me to wake up with a basic text to speech module, and gave me time to see what I had going on for the day before it shut itself down. This was a really fun experience working with a raspberry pi for my first time, as I still use this program every single day.</p><p>Tech used: Python, Raspberry Pi, cec-client, Google Calendar api, Cron, HTML, CSS</p>
+          <p>During the pandemic, a friend and I decided to teach ourselves Flutter. We were frequently playing video games together online, so thought it would be a fun idea to create a messenger app for us and our close friends. Using the Flutter BLoC pattern, we created a functional messenger app that uses Google Firebase as the backend.</p><p>Tech used: Flutter, Dart, Google Firebase</p>
         </p>
       </div>
     </div>
@@ -291,20 +291,20 @@
     <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
-        <h3>Personal Website and Photo Album</h3>
+        <h3>Raspberry Pi Google Calendar TV Alarm</h3>
         <div id="subtitle">Spring 2017</div>
         <div id="location"></div>
-          <p>Originally just used to teach myself HTML and CSS for my internship at Pivotal Labs, my personal website was just supposed to be a teaching project that would never be published. This changed however, as I was tasked with building a website for my programming studio class. I decied to teach myself the Django web framework, where I was able to store all of my data in a database, rendering different components dynamically with HTML templates. I built my own comment section, a photo album with google maps, and even a blog page. This whole process opened my mind to exploring new technology options, and taught me that no language or application is too hard for me to learn. The current web page you see today is an adaptation of this old project, as this page is HTML, CSS, and JavaScript all written by me hosted on GitHub Pages.</p><p>Tech used: Django framework, Python, Ajax, JavaScript, HTML, CSS</p>
+          <p>Having a busy schedule at school and struggling to wake up most mornings, I created a television alarm with a raspberry pi computer to help me be better organized. Using the google calendar api, I integrated my schedule to turn on my bedroom TV an hour before my first event was scheduled for the day. The TV would display my application, which showed the weather for the week, time, a couple news articles, and my schedule using various apis I found online. It prompted me to wake up with a basic text to speech module, and gave me time to see what I had going on for the day before it shut itself down. This was a really fun experience working with a raspberry pi for my first time, as I still use this program every single day.</p><p>Tech used: Python, Raspberry Pi, cec-client, Google Calendar api, Cron, HTML, CSS</p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
-          <a href="https://github.com/gmurr20/DjangoWebsite" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/website.png');"></div>
+          <a href="https://github.com/gmurr20/CollegeTVDevice" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/raspberryPi.jpg');"></div>
           </a>
         </div>
         <div class="hidden-lg hidden-md hidden-sm">
-          <a href="https://github.com/gmurr20/DjangoWebsite" target="_blank">
-          <div class="aboutMe" style="background-image: url('./static/images/website.png');"></div>
+          <a href="https://github.com/gmurr20/CollegeTVDevice" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/raspberryPi.jpg');"></div>
           </a>
         </div>  
       </div>
@@ -313,7 +313,34 @@
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3  class="standardTextAlignCenter">Personal Website and Photo Album</h3>
+        <h3  class="standardTextAlignCenter">Raspberry Pi Google Calendar TV Alarm</h3>
+        <div class="standardTextAlignCenter" id="subtitle">Spring 2017</div>
+        <div class="standardTextAlignCenter" id="location"></div>
+        <p>
+          <p>Having a busy schedule at school and struggling to wake up most mornings, I created a television alarm with a raspberry pi computer to help me be better organized. Using the google calendar api, I integrated my schedule to turn on my bedroom TV an hour before my first event was scheduled for the day. The TV would display my application, which showed the weather for the week, time, a couple news articles, and my schedule using various apis I found online. It prompted me to wake up with a basic text to speech module, and gave me time to see what I had going on for the day before it shut itself down. This was a really fun experience working with a raspberry pi for my first time, as I still use this program every single day.</p><p>Tech used: Python, Raspberry Pi, cec-client, Google Calendar api, Cron, HTML, CSS</p>
+        </p>
+      </div>
+    </div>
+  <div class="row space"></div><div class="row space"></div>
+        <div class="row">
+      <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+        <a href="https://github.com/gmurr20/DjangoWebsite" target="_blank">
+        <div class="aboutMe" style="background-image: url('./static/images/website.png');"></div>
+        </a>  
+      </div>
+      <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+        <h3>Personal Website and Photo Album</h3>
+        <div id="subtitle">Spring 2017</div>
+        <div id="location"></div>
+          <p>Originally just used to teach myself HTML and CSS for my internship at Pivotal Labs, my personal website was just supposed to be a teaching project that would never be published. This changed however, as I was tasked with building a website for my programming studio class. I decied to teach myself the Django web framework, where I was able to store all of my data in a database, rendering different components dynamically with HTML templates. I built my own comment section, a photo album with google maps, and even a blog page. This whole process opened my mind to exploring new technology options, and taught me that no language or application is too hard for me to learn. The current web page you see today is an adaptation of this old project, as this page is HTML, CSS, and JavaScript all written by me hosted on GitHub Pages.</p><p>Tech used: Django framework, Python, Ajax, JavaScript, HTML, CSS</p>
+      </div>
+      <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+    </div>
+    <div class="row space hidden-lg hidden-md hidden-sm"></div>
+    <div class="row hidden-lg hidden-md hidden-sm">
+      <div class="col-xs-12 mobilePadding">
+        <h3 class="standardTextAlignCenter">Personal Website and Photo Album</h3>
         <div class="standardTextAlignCenter" id="subtitle">Spring 2017</div>
         <div class="standardTextAlignCenter" id="location"></div>
         <p>
@@ -322,25 +349,32 @@
       </div>
     </div>
   <div class="row space"></div><div class="row space"></div>
-        <div class="row">
+    <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
-      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-        <a href="https://github.com/gmurr20/Fantasy-Football-Lineups" target="_blank">
-        <div class="aboutMe" style="background-image: url('./static/images/football.jpg');"></div>
-        </a>  
-      </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
         <h3>Fantasy Sports Lineup Generator</h3>
         <div id="subtitle">Fall 2016</div>
         <div id="location"></div>
           <p>Being an avid football fan and sports fan in general, I decided to create a script to generate lineups for daily fantasy sports. In daily fantasy sports, you create a lineup of players that you believe will do well, all while staying under a fixed budget. This is a classic knapsack problem in CS, as each player is given a weight. Using BeautifulSoup to scrape multiple sports websites, I compiled a list of statistics for each player over the past couple weeks. Taking these stats as well as using my own judgement, I was able to project how each player will do for that given day. I then was able to run these projections through an AI algorithm found online, generating 5 optimal lineups. This program ended up doing quite well versus the average player, as it had a 65% success rate in the 50/50 contests.</p><p>Tech used: Python, BeautifulSoup, Genetic Algorithm</p>
       </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+        <div class="hidden-xs" style="float:left;">
+          <a href="https://github.com/gmurr20/Fantasy-Football-Lineups" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/football.jpg');"></div>
+          </a>
+        </div>
+        <div class="hidden-lg hidden-md hidden-sm">
+          <a href="https://github.com/gmurr20/Fantasy-Football-Lineups" target="_blank">
+          <div class="aboutMe" style="background-image: url('./static/images/football.jpg');"></div>
+          </a>
+        </div>  
+      </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
-        <h3 class="standardTextAlignCenter">Fantasy Sports Lineup Generator</h3>
+        <h3  class="standardTextAlignCenter">Fantasy Sports Lineup Generator</h3>
         <div class="standardTextAlignCenter" id="subtitle">Fall 2016</div>
         <div class="standardTextAlignCenter" id="location"></div>
         <p>
@@ -364,7 +398,7 @@
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
       <div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
         <h3 id="travelDescription">
-          Contrary to popular belief, I do have a life outside of CS. I love to travel and meet new people. Here are some of my favorite memories over the years.
+          Here are some of my favorite memories over the years.
         </h3>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
@@ -473,7 +507,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
     <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
-      <h2>I'm Chicago raised, a driven developer, and the most normal CS major Jessica Bicek has ever met. Let's get in touch.</h2>
+      <h2>I'm Chicago raised, a driven developer, and ready to make an impact. Let's get in touch.</h2>
     </div>
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
   </div>
