--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       </div>
       <div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
         <h3>Ocient</h3>
-        <div id="subtitle">Incoming Software Engineer</div>
+        <div id="subtitle">Senior Software Engineer</div>
         <div id="location">Chicago, IL</div>
-          <p>The postings on this site are my own and do not necessarily reflect the views of Ocient or any other person or organization that is or may be related to or working with Ocient.</p><p>I am excited to announce that I have accepted a full-time software position with Ocient. Named one of the top startups to watch out for in Chicago by Built in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I have the opportunity to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
+          <p>The postings on this site are my own and do not necessarily reflect the views of Ocient or any other person or organization that is or may be related to or working with Ocient.</p><p>Named one of the top startups to watch out for in Chicago by Built in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I am proud to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -112,10 +112,10 @@
     <div class="row hidden-lg hidden-md hidden-sm">
       <div class="col-xs-12 mobilePadding">
         <h3 class="standardTextAlignCenter">Ocient</h3>
-        <div class="standardTextAlignCenter" id="subtitle">Incoming Software Engineer</div>
+        <div class="standardTextAlignCenter" id="subtitle">Senior Software Engineer</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          <p>The postings on this site are my own and do not necessarily reflect the views of Ocient or any other person or organization that is or may be related to or working with Ocient.</p><p>I am excited to announce that I have accepted a full-time software position with Ocient. Named one of the top startups to watch out for in Chicago by Built in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I have the opportunity to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
+          <p>The postings on this site are my own and do not necessarily reflect the views of Ocient or any other person or organization that is or may be related to or working with Ocient.</p><p>Named one of the top startups to watch out for in Chicago by Built in Chicago, Ocient's mission is to build the world's fastest database, ingressing billions of rows per second and having the scalability to query not just terabytes, but petabytes and even exabytes worth of data in a timely fashion. For more information on this startup that I am proud to be a part of, visit <a href="http://ocient.com/">ocient.com</a>.</p>
         </p>
       </div>
     </div>
