--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
       <div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
-          Hi and thanks for checking out my site! My name is Greg Murray and I am a software engineer based out of Chicago. I have a ton of experience with high performant C++ and multi-threaded concepts, as I have been working at a database startup out of college. This website is not always the most up to date, so the best way to reach me is through the contact button aboveß.
+          Hi and thanks for checking out my site! My name is Greg Murray and I am a software engineer based out of Chicago. I have a ton of experience with high performant C++ and multi-threaded concepts, as I have been working at a database startup out of college. This website is not always the most up to date, so the best way to reach me is through the contact button above.
       </div>
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
     </div>
